<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="5dp"
    app:cardMaxElevation="2dp"
    app:strokeColor="@color/white"
    app:strokeWidth="1dp"
    android:id="@+id/mcv_item">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgFilme"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/filmes_app"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNameFilme"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tx_item_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/imgFilme"
            app:layout_constraintTop_toBottomOf="@+id/imgFilme" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRating"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_item_rating"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvNameFilme"
            app:layout_constraintTop_toBottomOf="@+id/tvNameFilme" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvType"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_item_type"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvRating"
            app:layout_constraintTop_toBottomOf="@+id/tvRating" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvYear"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_item_year"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvType"
            app:layout_constraintTop_toBottomOf="@+id/tvType" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRuntime"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_item_runtime"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvYear"
            app:layout_constraintTop_toBottomOf="@+id/tvYear" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvGenre"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_item_genre"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvRuntime"
            app:layout_constraintTop_toBottomOf="@+id/tvRuntime" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>